--- a/force-app/main/default/lwc/movieInfo/movieInfo.html
+++ b/force-app/main/default/lwc/movieInfo/movieInfo.html
@@ -1,45 +1,38 @@
 <template>
-    <lightning-card title={movie.Name}> 
-        <div class="slds-grid">
-            <div class="slds-col slds-size_1-of-2">
-              <template lwc:if={movie.PosterURL__c}>
-                <img src={movie.PosterURL__c} width="100%"/>
+  <lightning-card title={movie.Name}>
+      <div class="movie-info-container slds-grid slds-wrap">
+          <div class="slds-col slds-size_1-of-2">
+              <template if:true={movie.PosterURL__c}>
+                  <img src={movie.PosterURL__c} alt={movie.Name} class="movie-poster"/>
               </template>
-              <template lwc:else>
-                <div class="slds-text-heading_large slds-align_absolute-center">No Poster</div>
+              <template if:false={movie.PosterURL__c}>
+                  <div class="no-poster-text">No Poster</div>
               </template>
-            </div>
-              <div class="slds-col slds-size_1-of-2 slds-p-around_medium">
-                <div class="slds-text-heading_medium">Release Date:{formattedReleaseDate}</div>
-                <div class="slds-text-title_bold">Original Language:</div>
-                <div>{movie.Original_Language__c}</div>
-                <div class="slds-text-title_bold">Genres:</div>
-                <div>{movie.Genre__c}</div>
-                <div class="slds-text-title_bold">Runtime:</div>
-                <div>{movie.Runtime_Minutes__c} minutes</div>
-                <div class="slds-text-title_bold">Overview:</div>
-                <div>{movie.Overview__c}</div>
-                <!-- Cast Members -->
-                <div class="slds-text-title_bold slds-p-top_medium">Cast Members</div>
-                <div class="slds-grid slds-wrap">
-                    <template for:each={castMemberList} for:item="castMember">
-                        <div key={castMember.Id} class="slds-col slds-size_1-of-3 slds-p-around_small slds-box">
-                            <!-- Actor Profile Image with onclick event -->
-                            <div onclick={handleActorClick} data-actor-id={castMember.Actors_Id__c}>
-                                <template if:true={castMember.Actors_Id__r.Profile_Url__c}>
-                                    <img src={castMember.Actors_Id__r.Profile_Url__c} alt={castMember.Actors_Id__r.Name} width="100%" />
-                                </template>
-                                <template if:false={castMember.Actors_Id__r.Profile_Url__c}>
-                                    <div class="slds-text-heading_large slds-align_absolute-center">No Profile Image</div>
-                                </template>
-                            </div>
-                            <!-- Actor Name -->
-                            <div class="slds-text-heading_small slds-p-top_small">{castMember.Actors_Id__r.Name}</div>
-                        </div>
-                    </template>
-                </div>
-            </div>
-            </div>
           </div>
-    </lightning-card>
+          <div class="slds-col slds-size_1-of-2 slds-p-around_medium">
+              <div class="release-date">Release Date: {formattedReleaseDate}</div>
+              <div class="original-language">Original Language: {movie.Original_Language__c}</div>
+              <div class="genres">Genres: {movie.Genre__c}</div>
+              <div class="runtime">Runtime: {movie.Runtime_Minutes__c} minutes</div>
+              <div class="overview">Overview: {movie.Overview__c}</div>
+              <div class="cast-members">Cast Members:</div>
+              <div class="cast-members-list slds-grid slds-wrap">
+                  <template for:each={castMemberList} for:item="castMember">
+                      <div key={castMember.Id} class="slds-col slds-size_1-of-3 slds-p-around_small slds-box cast-member">
+                          <div onclick={handleActorClick} data-actor-id={castMember.Actors_Id__c} class="actor-profile">
+                              <template if:true={castMember.Actors_Id__r.Profile_Url__c}>
+                                  <img src={castMember.Actors_Id__r.Profile_Url__c} alt={castMember.Actors_Id__r.Name} class="actor-image"/>
+                              </template>
+                              <template if:false={castMember.Actors_Id__r.Profile_Url__c}>
+                                  <div class="no-profile-image-text">No Profile Image</div>
+                              </template>
+                          </div>
+                          <div class="actor-name">{castMember.Actors_Id__r.Name}</div>
+                      </div>
+                  </template>
+              </div>
+          </div>
+      </div>
+      <lightning-button label="Back" slot="footer" onclick={handleBack} class="back-button"></lightning-button>
+  </lightning-card>
 </template>
